--- a/microservices-new/microservices-new/pom.xml
+++ b/microservices-new/microservices-new/pom.xml
@@ -19,15 +19,14 @@
         <module>product-service</module>
         <module>order-service</module>
         <module>inventory-service</module>
-        <module>discovery-service</module>
+        <module>discovery-server</module>
+        <module>api-gateway</module>
     </modules>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <spring-cloud.version>2025.0.0</spring-cloud.version>
-
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencyManagement>
